syntax = "proto3";

package auth;

option go_package = "./pkg/pb/";

service AuthService{
    rpc Sighup (SignupRequest) returns (SignupResponse) {}
    rpc OtpVerifiction (OtpRequest) returns (OtpResponse) {}
}

message SignupRequest{
    string Id = 1 ;              
    string Name =  2;            
    string Email =  3;           
    string Phone = 4 ;           
    string Password = 5 ;        
    string ConfirmPassword = 6 ; 
    string ReferalCode = 7 ;     
}

message SignupResponse{
    string ID = 1;
    string Name = 2;
    string Email = 3;
    string Phone = 4;
    string OTP = 5;
    string Token = 6;
    string IsUserExist = 7;
    string ReferalCode = 8;
    uint32 WalletBelance = 9;
}

message OtpRequest{
    string otp =1;
    string temperverToken =2;
}

message OtpResponse{
    string accessToken =1;
    string refreshToken =2;
}
